--- a/vibration_settings.ini
+++ b/vibration_settings.ini
@@ -17,12 +17,16 @@ start_message = Dryer has started
 # The message sent when your appliance has finished (blank to send no message)
 end_message = Dryer has finished
 
-# The message sent when your the monitor turns on (blank to send no message)
+# The message sent when your monitor turns on (blank to send no message)
 boot_message =
+
+# The message sent when your monitor turns off (blank to send no message)
+term_message =
 
 [mqtt]
 #sample config
 # mqtt_topic = mqtt/appliance-monitor
+# mqtt_topic = mqtt/appliance-monitor/availability
 # mqtt_hostname = localhost
 # mqtt_port = 1883
 # leave mqtt_username/password empty for no Authentication
@@ -30,6 +34,7 @@ boot_message =
 # mqtt_password = password
 # mqtt_client = rpi-appliance-monitor
 mqtt_topic = 
+mqtt_availability_topic = 
 mqtt_hostname = 
 mqtt_port = 
 mqtt_username = 
